--- a/LibraryDemo.DesktopClient/Views/AddLibraryView.xaml
+++ b/LibraryDemo.DesktopClient/Views/AddLibraryView.xaml
@@ -7,22 +7,53 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid  Background="DarkSalmon">
-        <StackPanel Margin="100">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
-                <Label FontSize="20" Content="{Binding NameContent}"></Label>
-                <TextBox Text="{Binding Name}" Width="400" Height="50" FontSize="20"></TextBox>
-            </StackPanel>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
 
-            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
-                <Label FontSize="20" Content="{Binding AddressContent}"></Label>
-                <TextBox Text="{Binding Address}" Width="400"  Height="50" FontSize="20"></TextBox>
-            </StackPanel>
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="0.5*"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" FontSize="20" Content="{Binding NameContent}"></Label>
+                    <TextBox Grid.Row="1" Text="{Binding Name}" FontSize="20"></TextBox>
+                </Grid>
 
-            <TextBlock Text="{Binding ErrMasage}" Height="auto" Width="auto" FontSize="20" HorizontalAlignment="Center"/>
-            <Button Width="400" Height="50" Content="{Binding AddButtonContent}" FontSize="20" Command="{Binding Path=AddCommand}" Background="Moccasin"/>
-        </StackPanel>
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="0.5*"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" FontSize="20" Content="{Binding AddressContent}"></Label>
+                    <TextBox Grid.Row="1" Text="{Binding Address}" FontSize="20"></TextBox>
+                </Grid>
 
+                <Grid Grid.Row="3">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="0.5*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Text="{Binding ErrMasage}" FontSize="20"/>
+                    <Button Grid.Row="1" Content="{Binding AddButtonContent}" FontSize="20" Command="{Binding Path=AddCommand}" Background="Moccasin"/>
+                </Grid>
+            </Grid>
+        </Grid>
         <ContentControl Content="{Binding CurentView}"/>
     </Grid>
 </UserControl>
