--- a/LibraryDemo.DesktopClient/Views/SearchView.xaml
+++ b/LibraryDemo.DesktopClient/Views/SearchView.xaml
@@ -12,13 +12,26 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Margin="20,20,20,0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock Text="{Binding SelectContent}" FontSize="30" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding KeyWord}" Background="WhiteSmoke" Height="30" Width="550" FontSize="20" />
-            <Button Content="{Binding SearchButtonContent}" Command="{Binding Path=SearchCommand}"  Background="Moccasin"
-                    FontSize ="20" VerticalAlignment="Center" Width="250" Height="30" HorizontalAlignment="Left"/>
-            <TextBlock Text="{Binding ErrMasage}" Margin="10, 5, 0, 0" Height="auto" Width="auto" FontSize="20" HorizontalAlignment="Center"/>
-        </StackPanel>
+        <Grid Grid.Row="0" Margin="0,20,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="1" Text="{Binding SelectContent}" FontSize="30"/>
+
+            <TextBox Grid.Column="2" Text="{Binding KeyWord}" Background="WhiteSmoke" FontSize="20" />
+
+            <Button Grid.Column="3" Content="{Binding SearchButtonContent}" Command="{Binding Path=SearchCommand}"  Background="Moccasin" FontSize ="20"/>
+
+            <TextBlock Grid.Column="4" Text="{Binding ErrMasage}" FontSize="20" Margin="5,10,0,0"/>
+        </Grid>
+        
         <ContentControl Content="{Binding CurentView}" Grid.Row="1"/>
+        
     </Grid>
 </UserControl>
