--- a/LibraryDemo.DesktopClient/Views/ShowBooksView.xaml
+++ b/LibraryDemo.DesktopClient/Views/ShowBooksView.xaml
@@ -10,12 +10,25 @@
         <ListView Margin="100" Name="lvBooks" ItemsSource="{Binding ListOfBooks}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="{Binding TitleHeader}" Width="150" DisplayMemberBinding="{Binding Title}" />
-                    <GridViewColumn Header="{Binding AuthorHeader}" Width="520" DisplayMemberBinding="{Binding Author}" />
-                    <GridViewColumn Header="{Binding PriceHeader}" Width="80" DisplayMemberBinding="{Binding Price}" />
-                    <GridViewColumn Header="{Binding LibraryHeader}" Width="580" DisplayMemberBinding="{Binding Library}" />
+                    <GridViewColumn Header="{Binding TitleHeader}" DisplayMemberBinding="{Binding Title}" Width="{Binding ElementName=FirstCol, Path=ActualWidth}"/>
+                    <GridViewColumn Header="{Binding AuthorHeader}" DisplayMemberBinding="{Binding Author}" Width="{Binding ElementName=SecondCol, Path=ActualWidth}"/>
+                    <GridViewColumn Header="{Binding PriceHeader}" DisplayMemberBinding="{Binding Price}" Width="{Binding ElementName=ThirdCol, Path=ActualWidth}"/>
+                    <GridViewColumn Header="{Binding LibraryHeader}" DisplayMemberBinding="{Binding Library}" Width="{Binding ElementName=FourthCol, Path=ActualWidth}"/>
                 </GridView>
             </ListView.View>
         </ListView>
+        <Grid Visibility="Hidden" Margin="100">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="4*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0" x:Name="FirstCol"/>
+            <Grid Grid.Column="1" x:Name="SecondCol"/>
+            <Grid Grid.Column="2" x:Name="ThirdCol"/>
+            <Grid Grid.Column="3" x:Name="FourthCol"/>
+        </Grid>
     </Grid>
 </UserControl>
