Model rappers, mappers and services

--- a/LibraryDemo.DesktopClient/App.xaml
+++ b/LibraryDemo.DesktopClient/App.xaml
@@ -4,5 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:LibraryDemo.DesktopClient"
     StartupUri="Views/MainWindow.xaml">
-    <Application.Resources />
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="ListViewStyle" TargetType="ListViewItem">
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
