--- a/LibraryDemo.DesktopClient/Views/ShowBooksView.xaml
+++ b/LibraryDemo.DesktopClient/Views/ShowBooksView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="DarkSalmon">
-        <ListView Margin="100" Name="lvBooks" ItemsSource="{Binding ListOfBooks}">
+        <ListView Margin="100" Name="lvBooks" ItemsSource="{Binding ListOfBooks}" ItemContainerStyle="{DynamicResource ListViewStyle}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="{Binding TitleHeader}" DisplayMemberBinding="{Binding Title}" Width="{Binding ElementName=FirstCol, Path=ActualWidth}"/>
