--- a/LibraryDemo.DesktopClient/Views/BooksByView.xaml
+++ b/LibraryDemo.DesktopClient/Views/BooksByView.xaml
@@ -28,7 +28,7 @@
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Name}" />
+                            <TextBlock Text="{Binding Name}"  FontSize="20"/>
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
